tests/fixtures/invalid/duplicate_union_type.avsc
{
  "type": "record",
  "name": "Test",
  "fields": [
    {"name": "value", "type": ["null", "string", "null"]}
  ]
}
